2015-02-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-mime-inline-part, gnus-mm-display-part):
	Fix point motion when removing displayed MIME part.
	(gnus-article-edit-part): Make jumping to the next part really work
	when deleting or stripping.
	(gnus-mime-buttonize-attachments-in-header): Make header attachment
	buttons identical to the ones in the article body so as to work deleting
	and stripping.

2015-02-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-decode.el (mm-shr)
	* mm-view.el (mm-inline-text-html-render-with-w3m):
	Revert my bogus change that made the start marker of a part
	the "moves after insertion" type.

2015-02-23  Tassilo Horn  <tsdh@gnu.org>

	* mailcap.el (mailcap-mime-data): Support `pdf-view-mode' (from PDF
	Tools: https://github.com/politza/pdf-tools) for viewing PDF
	attachments in emacs.

2015-02-23  Magnus Henoch  <magnus.henoch@gmail.com>

	* sasl.el (sasl-mechanism-alist): Refer to sasl-scram-rfc
	instead of sasl-scram-sha-1, as the former is the name that can be
	required.

	* sasl-scram-rfc.el (sasl-scram-sha-1-steps)
	(sasl-scram-sha-1-client-final-message)
	(sasl-scram-sha-1-authenticate-server): Move to end of file.

2015-02-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-mime-display-single): Avoid "End of buffer" error.

2015-02-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sasl-scram-rfc.el (sasl-cl-coerce, sasl-cl-mapcar-many, sasl-cl-map)
	(sasl-string-prefix-p): New compatibility functions.

2015-02-15  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-compat.el (process-live-p): Added new compat function for Emacs
	23.

2015-02-14  Eric Abrahamsen  <eric@ericabrahamsen.net>

	* nnimap.el (nnimap-get-groups): Correctly read unquoted group names
	from the server LIST response.

2015-02-14  Lars Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-retrieve-headers): If the server closes connection
	during header retrieval, error out instead of interpreting the data in